<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        
       <ImageView
           android:layout_width="130dp"
           android:layout_height="13dp"
           android:layout_marginTop="80dp"
           android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="50sp"
            android:layout_marginEnd="50sp"
            android:gravity="center"
            android:textSize="14sp"
            android:hint="@string/we_will_send_to_you_an_one_time_password_on_this_mobile_number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50sp"
            android:text="@string/enter_mobile_number"
            android:gravity="center"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_91"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:id="@+id/inputMobile"
                android:imeOptions="actionDone"
                android:hint="@string/_1234567890"
                android:importantForAutofill="no"
                android:inputType="none"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="8dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:layout_margin="30dp"
            android:text="@string/get_otp"
            android:id="@+id/button"/>


    </LinearLayout>

</ScrollView>